# wayvid

./: .gitignore  AI_PROMPT.md  AI_PROMPT.md.old  CHANGELOG.md  CHEATSHEET.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  M1_CHECKLIST.md  M1_DELIVERY_REPORT.md  M1_FINAL_TEST_SUCCESS.md  M1_TEST_REPORT.md  M2_DELIVERY_REPORT.md  M2_PHASE2_TEST_REPORT.md  M2_PROGRESS.md  M5_GITHUB_PROJECT.md  M5_PLAN.md  M5_PROGRESS.md  M5_QUICKSTART.md  M5_TODO.md  Makefile  PR_DESCRIPTION_14.md  PR_DESCRIPTION_15.md  PR_DESCRIPTION_16.md  QUICKSTART.md  README.md  README_CN.md  RELEASE_NOTES_SHORT.md  benchmark_optimizations.sh  cliff.toml  components.json  flake.nix  package.json  pnpm-lock.yaml  test-multi-monitor-config.yaml  test_layout_modes.sh  vite.config.ts
.github/: FUNDING.yml  release.yml
.github/prompts/: openspec-proposal.prompt.md
.github/workflows/: appimage.yml  aur-publish.yml  ci.yml  docs.yml  m6-features.yml  quality-check.yml  release-prerelease.yml  release-stable.yml  release.yml
.serena/: project.yml
apps/lwe/: components.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/lwe/src-tauri/: Cargo.toml  tauri.conf.json
apps/lwe/src-tauri/src/: action_outcome.rs  app_shell.rs  desktop.rs  lib.rs  library.rs  main.rs  models.rs  settings.rs  workshop.rs
apps/lwe/src-tauri/src/assembly/: action_outcome.rs  compatibility.rs  desktop_page.rs  library_detail.rs  library_page.rs  mod.rs  settings_page.rs  workshop_detail.rs  workshop_page.rs
apps/lwe/src-tauri/src/commands/: app_shell.rs  desktop.rs  library.rs  settings.rs  workshop.rs
apps/lwe/src-tauri/src/policies/shared/: compatibility_policy.rs  cover_policy.rs  mod.rs  support_policy.rs
apps/lwe/src-tauri/src/results/: app_shell.rs  compatibility.rs  desktop.rs  desktop_apply.rs  library.rs  mod.rs  monitor_discovery.rs  settings.rs  settings_persistence.rs  workshop.rs
apps/lwe/src-tauri/src/services/: app_shell_service.rs  autostart_service.rs  catalog_mapper.rs  compatibility_service.rs  desktop_persistence_service.rs  desktop_service.rs  library_service.rs  mod.rs  monitor_service.rs  settings_persistence_service.rs  settings_service.rs  workshop_service.rs
apps/lwe/src-tauri/src/services/backends/: mod.rs  monitor_backend.rs  niri_monitor_backend.rs  persistence_backend.rs
configs/: config.example.yaml  hyprland-autostart.conf  niri-autostart.kdl
crates/lwe-core/: Cargo.toml
crates/lwe-core/src/: ipc.rs  layout.rs  lib.rs  library.rs  power.rs  settings.rs  types.rs
crates/lwe-core/src/config/: pattern.rs  types.rs
crates/wayvid/: Cargo.toml
crates/wayvid-core/: Cargo.toml
crates/wayvid-core/src/: hdr.rs  ipc.rs  lib.rs  library.rs
crates/wayvid-core/src/config/: mod.rs  pattern.rs
crates/wayvid-ctl/: Cargo.toml
crates/wayvid-ctl/src/: ipc.rs  main.rs
crates/wayvid-engine/: Cargo.toml
crates/wayvid-engine/src/: egl.rs  frame_timing.rs  lib.rs  mpv.rs
crates/wayvid-engine/src/engine/: command.rs  mod.rs  session.rs
crates/wayvid-engine/src/wayland/: layer_shell.rs  output.rs
crates/wayvid-gui/: Cargo.toml
crates/wayvid-gui/locales/: en.toml  zh-CN.toml
crates/wayvid-gui/src/: app.rs  async_loader.rs  engine.rs  i18n.rs  ipc.rs  ipc_server.rs  main.rs  messages.rs  service.rs  settings.rs  single_instance.rs  state.rs  theme.rs  tray.rs  widgets.rs
crates/wayvid-gui/src/views/: about.rs  folders.rs  library.rs  mod.rs  monitors.rs  settings.rs
crates/wayvid-gui/src/widgets/: mod.rs  monitor_selector.rs  thumbnail_image.rs  wallpaper_card.rs
crates/wayvid-library/: Cargo.toml
crates/wayvid-library/src/: database.rs  lib.rs  scanner.rs  thumbnail.rs  workshop.rs  workshop_catalog.rs
crates/wayvid/src/: main.rs
docs/: .gitignore  CI_CD_M6.md  HDR_TESTING_SUMMARY.md  HDR_USER_GUIDE.md  HDR_WAYLAND_STATUS.md  IPC.md  M3_DELIVERY_REPORT.md  M5_FRAME_SKIP.md  M5_ISSUE1_PROGRESS.md  M5_ISSUE2_PROGRESS.md  M5_ISSUE2_TESTING.md  M5_ISSUE2_TEST_REPORT.md  M5_QUICK_TEST.md  M5_TEST_GUIDE.md  M6_KICKOFF.md  M6_ROADMAP.md  MULTI_MONITOR_EXAMPLES.md  NIRI_NOCTALIA_ROADMAP.md  QUICKSTART.md  README.md  RELEASE_PROCESS.md  SHARED_DECODE.md  VIDEO_SOURCES.md  WE_FORMAT.md  auto_translate.py  book.toml  build.sh  populate_translations.py  serve.sh  test-language-switcher.sh  translate_po.py
examples/: hdr-config.yaml  power_management.yaml  simple-config.yaml  test-config-3displays.yaml  test-config.yaml  test-multi-monitor-config.yaml  workshop-example.md
locales/: en.toml  zh-CN.toml
openspec/: AGENTS.md  config.yaml  project.md
packaging/: wayvid-gui.desktop
scripts/: README.md  analyze_test_log.sh  dev-check.sh  install.sh  pre-push-check.sh  publish-aur-package.sh  quick-check.sh  run_comparison_test.sh  simple_memory_test.sh  simulate_memory_test.sh  sync-version.sh  test-gui-auto.sh  test-gui.sh  test-hdr-functionality.sh  test-hdr-tonemapping.sh  test-layout-modes.sh  test-swww-conflict.sh  test-workshop-mock.sh  test-workshop.sh  test_memory_usage.sh  uninstall.sh  verify-hdr-implementation.sh
src/: app.css  config.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/assembly/: app_shell.rs  library_detail.rs  library_page.rs  settings_page.rs  workshop_detail.rs  workshop_page.rs
src-tauri/src/commands/: library.rs  settings.rs  workshop.rs
src-tauri/src/policies/shared/: cover_policy.rs  invalidation_policy.rs  support_policy.rs
src-tauri/src/results/: desktop_persistence.rs  mod.rs  monitor_discovery.rs  session_persistence.rs  settings_persistence.rs  workshop.rs
src-tauri/src/services/: autostart_service.rs  compatibility_service.rs  desktop_persistence_service.rs  desktop_service.rs  mod.rs  monitor_service.rs  settings_persistence_service.rs  settings_service.rs  workshop_service.rs
src-tauri/src/services/backends/: monitor_backend.rs  niri_monitor_backend.rs  persistence_backend.rs
systemd/: wayvid.service
tests/: m2_phase7_test.sh  performance_test.sh
(+408 files in other folders)
