# Repository Reset Workspace
# ==========================
#
# This repository is in repository-reset mode for the Linux dynamic wallpaper
# platform. The current crates remain in the workspace as migration candidates
# and retained technical assets to review selectively, not as final product
# commitments for the next release.
# - wayvid-core: retained shared models and configuration candidate
# - wayvid-engine: retained playback and rendering candidate
# - wayvid-library: retained local library and metadata candidate
# - wayvid-gui: retained desktop shell and UX pattern candidate
# - wayvid-ctl: retained command surface and automation candidate

[workspace]
resolver = "2"
members = [
    "crates/wayvid-core",
    "crates/wayvid-engine",
    "crates/wayvid-library",
    "crates/wayvid-gui",
    "crates/wayvid-ctl",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.75"
authors = ["wayvid contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/YangYuS8/wayvid"

# 共享依赖版本 (workspace.dependencies)
[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

# Async
tokio = { version = "1.0", features = ["sync", "rt-multi-thread"] }

# Testing
tempfile = "3.8"

# Optimized release profile (based on Rust Performance Book)
[profile.release]
opt-level = 3              # Maximum optimization
lto = "thin"              # Link-Time Optimization (thin = faster build, fat = smaller binary)
codegen-units = 1          # Single codegen unit for maximum optimization
strip = true               # Strip symbols for smaller binary size
panic = "abort"            # Smaller binary, faster unwinding

# Alternative ultra-optimized profile (use with: cargo build --profile release-opt)
# Trades longer compile time for maximum runtime performance
[profile.release-opt]
inherits = "release"
lto = "fat"               # Full LTO for maximum optimization
opt-level = 3
codegen-units = 1

[profile.dev]
opt-level = 1

# 注意: 旧的 [lib], [[bin]], [package.metadata.deb] 配置已移除
# 各个 crate 现在有自己的 Cargo.toml 配置
# 打包配置将在 crates/wayvid/Cargo.toml 中定义
