# Repository Reset Workspace
# ==========================
#
# This repository is in repository-reset mode for the Linux dynamic wallpaper
# platform. The active workspace path is limited to apps/lwe/src-tauri plus
# the retained crates lwe-core, lwe-library, and lwe-engine, which remain
# under evaluation for selective migration. Retired legacy GUI/CLI crates stay
# in the repository temporarily for reference only and are not active workspace
# members.
# - lwe-core: retained shared models and configuration candidate
# - lwe-engine: retained playback and rendering candidate
# - lwe-library: retained local library and metadata candidate
# - apps/lwe/src-tauri: active LWE application shell
# - wayvid-gui / wayvid-ctl: removed from the repository; history remains in git and archived planning material

[workspace]
resolver = "2"
members = [
    "crates/lwe-core",
    "crates/lwe-engine",
    "crates/lwe-library",
    "apps/lwe/src-tauri",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.75"
authors = ["LWE contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/YangYuS8/lwe"

# Shared dependency versions (workspace.dependencies)
[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

# Async
tokio = { version = "1.0", features = ["sync", "rt-multi-thread"] }

# Testing
tempfile = "3.8"

# Optimized release profile (based on Rust Performance Book)
[profile.release]
opt-level = 3              # Maximum optimization
lto = "thin"              # Link-Time Optimization (thin = faster build, fat = smaller binary)
codegen-units = 1          # Single codegen unit for maximum optimization
strip = true               # Strip symbols for smaller binary size
panic = "abort"            # Smaller binary, faster unwinding

# Alternative ultra-optimized profile (use with: cargo build --profile release-opt)
# Trades longer compile time for maximum runtime performance
[profile.release-opt]
inherits = "release"
lto = "fat"               # Full LTO for maximum optimization
opt-level = 3
codegen-units = 1

[profile.dev]
opt-level = 1

# Legacy root-level [lib], [[bin]], and package metadata entries were removed
# during the workspace transition. Packaging and release details should be
# re-evaluated per migration candidate crate during the repository reset.
