[package]
name = "lwe-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
open = "5.3"
lwe-engine = { path = "../crates/lwe-engine" }
lwe-library = { path = "../crates/lwe-library" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
