[package]
name = "lwe-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and configuration for LWE"
repository.workspace = true

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
dirs = "5.0"
sys-locale = "0.3"

[dev-dependencies]
tempfile = "3.8"
