[package]
name = "wayvid-engine"
version = "0.5.0-beta.2"
edition = "2021"
rust-version = "1.75"
authors = ["wayvid contributors"]
license = "MIT OR Apache-2.0"
description = "Video rendering engine for wayvid (Wayland + MPV)"
repository = "https://github.com/YangYuS8/wayvid"

[dependencies]
wayvid-core = { path = "../wayvid-core" }

# Wayland client
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
smithay-client-toolkit = { version = "0.19", default-features = false, features = ["calloop"] }

# EGL/OpenGL
khronos-egl = { version = "6.0", features = ["dynamic"] }
gl = "0.14"
wayland-egl = "0.32"

# Vulkan (optional)
ash = { version = "0.38", optional = true }
ash-window = { version = "0.13", optional = true }
raw-window-handle = { version = "0.6", optional = true }

# Video playback (libmpv)
libmpv-sys = "3.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Event loop
calloop = "0.14"
calloop-wayland-source = "0.4"

# Utilities
bitflags = "2.4"
libc = "0.2"
lz4_flex = "0.11.3"

[features]
default = ["backend-wayland"]
backend-wayland = []
backend-vulkan = ["dep:ash", "dep:ash-window", "dep:raw-window-handle"]
