[package]
name = "wayvid-gui"
version = "0.5.0-beta.2"
edition = "2021"
rust-version = "1.75"
authors = ["wayvid contributors"]
license = "MIT OR Apache-2.0"
description = "GUI application for wayvid wallpaper manager"
repository = "https://github.com/YangYuS8/wayvid"
default-run = "wayvid-gui"

[[bin]]
name = "wayvid-gui"
path = "src/main.rs"

[dependencies]
# Internal crates
wayvid-core = { path = "../wayvid-core" }
wayvid-engine = { path = "../wayvid-engine" }
wayvid-library = { path = "../wayvid-library" }

# GUI framework
iced = { version = "0.13", features = ["tokio", "image", "lazy", "advanced", "svg"] }

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "fs", "macros", "time"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utilities
dirs = "5.0"
open = "5.0"

# Internationalization
rust-i18n = "3"
sys-locale = "0.3"

# IPC communication
interprocess = { version = "2.2", features = ["tokio"] }

# System tray (SNI/StatusNotifierItem for Linux/Wayland)
ksni = "0.2"

# PNG decoding (for tray icon)
png = "0.17"

# Event loop (for engine communication)
calloop = "0.14"

[features]
default = []

[dev-dependencies]
tempfile = "3.8"

[package.metadata.deb]
name = "wayvid"
maintainer = "wayvid contributors"
copyright = "2024-2025, wayvid contributors"
license-file = ["../../LICENSE-MIT", "0"]
extended-description = """\
A dynamic wallpaper engine for Wayland compositors.
Supports video, image, and GIF wallpapers with smooth playback
and low resource consumption."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/wayvid-gui", "usr/bin/", "755"],
    ["target/release/wayvid-ctl", "usr/bin/", "755"],
    ["../../packaging/wayvid-gui.desktop", "usr/share/applications/wayvid.desktop", "644"],
    ["../../logo.svg", "usr/share/icons/hicolor/scalable/apps/wayvid.svg", "644"],
    ["../../README.md", "usr/share/doc/wayvid/README.md", "644"],
]
