[package]
name = "wayvid"
version = "0.5.0-alpha.1"
edition = "2021"
rust-version = "1.75"
authors = ["wayvid contributors"]
license = "MIT OR Apache-2.0"
description = "Dynamic video wallpaper engine for Wayland compositors (GUI)"
repository = "https://github.com/YangYuS8/wayvid"
keywords = ["wayland", "wallpaper", "video", "mpv", "hyprland"]
categories = ["multimedia::video", "gui"]

[dependencies]
wayvid-core = { path = "../wayvid-core" }
wayvid-engine = { path = "../wayvid-engine" }
wayvid-library = { path = "../wayvid-library" }

# GUI
eframe = "0.29"
egui = "0.29"

# Image for textures
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# Internationalization (i18n)
rust-i18n = "3"
sys-locale = "0.3"

# Async
tokio = { version = "1.0", features = ["sync", "rt-multi-thread"] }

# System tray (optional)
tray-icon = { version = "0.17", optional = true }
winit = { version = "0.30", optional = true }

# CLI for simple subcommands
clap = { version = "4.5", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
dirs = "5.0"
shellexpand = "3.1"

[features]
default = []
tray = ["dep:tray-icon", "dep:winit"]

[[bin]]
name = "wayvid"
path = "src/main.rs"
