[package]
name = "lwe-app-shell"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
open = "5.3"
lwe-library = { path = "../../../crates/lwe-library" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
